--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,19 +43,5 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.+'
     compile 'com.github.medyo:fancybuttons:1.8.1'
 
-    //Core card library
-    compile 'com.github.gabrielemariotti.cards:cardslib-core:2.1.0'
-
-    //Optional for built-in cards
-    compile 'com.github.gabrielemariotti.cards:cardslib-cards:2.1.0'
-
-    //Optional for RecyclerView
-    compile 'com.github.gabrielemariotti.cards:cardslib-recyclerview:2.1.0'
-
-    //Optional for staggered grid view support
-    compile 'com.github.gabrielemariotti.cards:cardslib-extra-staggeredgrid:2.1.0'
-
-    //Optional for drag and drop support
-    compile 'com.github.gabrielemariotti.cards:cardslib-extra-dragdrop:2.1.0'
-
+    compile 'de.hdodenhof:circleimageview:2.1.0'
 }
