--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,16 @@
 /build
 /captures
 /.idea/misc.xml
+.idea/dictionaries/Sam.xml
+
+.idea/gradle.xml
+
+.idea/gradle.xml
+
+.idea/inspectionProfiles/profiles_settings.xml
+
+.idea/inspectionProfiles/Project_Default.xml
+
+.idea/misc.xml
+
+app/app-debug.apk
